[project]
name = "lshrs-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "lshrs>=0.1.0",
    "matplotlib>=3.5.0",
    "notebook>=7.5.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.5.0",
    "scipy>=1.9.0",
    "sqlalchemy>=2.0.0",
    "tqdm>=4.67.1",
]
